<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fautus</string>
    <string name="fautus">fautus</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome</string>
    <string name="fautus_allow">With Fautus you can request a nearby photographer, on demand</string>
    <string name="to_do_this">To do this, Fautus needs access to your location.</string>
    <string name="choose_level">Choose the level of your Fautus photographer, and get matched instantly, on demand</string>
    <string name="within_seconds">Your photographer will message you within seconds and take professional photos of your casual Moment</string>
    <string name="after_all_pho">After all photos are taken, the Moment is closed. Then, all photos will appear instantly in your own smartphone.</string>
    <string name="review_them">Review them in detail and pay\n for only those like.</string>
    <string name="that_simple">That Simple</string>
    <string name="sign_up_free">SignUp now for free</string>
    <string name="sign_up_photo">SignUp to become a fautus photographer</string>
    <string name="email_address">Email Address</string>
    <string name="pwd">Password</string>
    <string name="sign_up">SignUp</string>
    <string name="already_acc"><u>Already have an account? Login</u> </string>
    <string name="am_photographer">I am a photographer</string>
    <string name="login_acc">Login to your account</string>
    <string name="login">Login</string>
    <string name="sign_up_acc"><u>Don\'t have an account? Signup now</u> </string>
    <string name="forgot_pwd">Forgot your password</string>
    <string name="forgot_pwd_ques">Forgot your password?</string>
    <string name="request">Request</string>
    <string name="an_email_reset">An email will be sent with instructions \n on how to reset your password.</string>
    <string name="cancel">Cancel</string>
    <string name="making_money">Making Money</string>
    <string name="never_been">Has Never Been Easier</string>
    <string name="ready_to_tack">Be ready to take high-quality photos.</string>
    <string name="follow_the_map">Follow the map. Find Fautus users. And let your passion and talent for photography capture their Moment.</string>
    <string name="very_simple">Fautus needs access to your location</string>
    <string name="how_it_work">How Does it Work?</string>
    <string name="user_near_req">A Moment opens when a nearby user requests a photographer. After the request is sent, use the map, and find the user’s specific location.\n\nOnce you find the user, take six to nine photos, as they request.</string>
    <string name="after_last_photo">After the last photo is taken, close the Moment. Instantly, all the photos will appear, in protected form, in the user’s app, where they can be purchased and shared.</string>
    <string name="having_slow">Having a slow day?</string>
    <string name="approach_potential">Approach a potential user, and tell them about Fautus. Take their photos, and share a ‘Snap’ Moment code. It works the same way!</string>
    <string name="all_you_need">All you need is a DSLR camera with your favorite adapter connected to your phone.</string>
    <string name="remember_data">Remember! Sufficient cellular data or a WiFi connection are required at all times</string>
    <string name="for_more_details">For more detailed information make sure to check the FAQ\'s section</string>
    <string name="create_profile">Create Profile</string>
    <string name="full_name">Full Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="languages_spoken">Languages Spoken (comma separated)</string>
    <string name="dob">Date of Birth</string>
    <string name="ssn">Last 4 of SSN</string>
    <string name="cont">Continue</string>
    <string name="upload_selfie">Upload Selfie</string>
    <string name="upload_photo_id">Upload picture of \nPhoto ID</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="slash_sym">/</string>
    <string name="user_profile_img">userProfile.png</string>
    <string name="user_id_img">userId.png</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="model_here">Don\'t see your  listed? Enter the brand and model here</string>
    <string name="all_photography_req">All photographers are required to have a semi-professional DSLR camera or better.\n\nPlease select your primary equipment below</string>
    <string name="select_equipment">Select Equipment</string>
    <string name="avid">Avid</string>
    <string name="skill">Skill</string>
    <string name="pro">Pro</string>
    <string name="select_your_level">Select your level</string>
    <string name="user_can_req">Users can request different levels of photographers.\n\nThe cost to the end user, as well as your compensation share, vary upon the chosen level.</string>
    <string name="photographer_type_avid">Avid photographers are hobbyists who love taking photos with pro or semi-pro DSLR cameras.\n\nThey are matched with users requesting only Avid photographers. The compensation for the Avid level is $0.90 per moment, plus $0.75 per photo sold. Per hour, the average Avid photographer captures 7 Moments, and sells about 21 photos.</string>
    <string name="photographer_type_skill">Skill photographers have years of experience. They take amazing photos, but photography is not their primary source of income.\n\nSkill photographers can choose to be matched with users requesting either the Skill or Avid levels. The compensation share for Skill photographers is $1.60 per Moment, plus $1.50 per photo sold.</string>
    <string name="photographer_type_pro">Pro photographers make any practice of the photography industry their main source of income,and are expected to be part of a business.\n\nPro photographers can choose to be matched with users requesting the Avid, Skill, or Pro levels. The compensation share for Pro photographers is $2.30 per Moment, plus $2.25 per photo sold.</string>
    <string name="photo_req">Fautus photographers are required to have the Fautus camera strap to identify themselves as a Fautus approved photographer.\nEnter your shipping address to have one shipped to you for free.</string>
    <string name="shipping_information">Shipping information</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="zip">Zip</string>
    <string name="usa">USA</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="moments">Moments</string>
    <string name="help_faq">Help / FAQ</string>
    <string name="settings">Settings</string>
    <string name="legal">Legal</string>
    <string name="photographer">Photographer</string>
    <string name="moment_colon">Moment:</string>
    <string name="each_photo">Each Photo:</string>
    <string name="req_photo">Request a Photographer</string>
    <string name="snap_photo_moment">I have a snap moment code</string>
    <string name="create_photo_moment">Create a snap photo session</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="not_available">Not Available</string>
    <string name="available">Available</string>
    <string name="logout">Logout</string>
    <string name="authenticity_strip">Authenticity Strip</string>
    <string name="strip_msg">At Fautus, we are proud of our photographers’ artistic vision. The authenticity strip that appears to the right of each photo guarantees it is an authentic Fautus photograph, and is a symbol of your support for local artists.</string>
    <string name="version">v</string>
    <string name="terms_service">Terms Of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="apirequestsuccess">apirequestsuccess</string>
    <string name="error_code">error_code</string>
    <string name="message">message</string>
    <string name="result">result</string>
    <string name="send">Send</string>
    <string name="new_message">New Message</string>
    <string name="your_moment">Your Moment</string>
    <string name="unknown">Unknown</string>
    <string name="user_one">User 1</string>
    <string name="user_two">User 2</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="purchased">Purchased</string>
    <string name="no_moments">You have no moments.</string>
    <string name="selected">Selected</string>
    <string name="per_photo">per photo</string>
    <string name="but_moment">Buy This Moment </string>
    <string name="complete_moment">Complete Your Moment</string>
    <string name="purchase_remaining">Purchase Remaining</string>
    <string name="approx">approx</string>
    <string name="tran_fee">TransactionFee</string>
    <string name="share_moment">Share Moment</string>
    <string name="moment">Moment</string>
    <string name="share_txt">Hey there. Check out this moment!</string>
    <string name="in_moment">In Moment</string>
    <string name="email_invite">Email Invite</string>
    <string name="please_rate">Please Rate Your Photographer</string>
    <string name="friendliness">Friendliness</string>
    <string name="quality_photo">Quality of photo</string>
    <string name="quality_photos">Quality of photos</string>
    <string name="no_tips">No tip</string>
    <string name="tip_one">$1</string>
    <string name="tip_two">$2</string>
    <string name="tip_five">$5</string>
    <string name="tip_ten">$10</string>
    <string name="pay_down">Pay &amp; Download</string>
    <string name="zero">0</string>
    <string name="upload_info">Once the photoshoot is complete please transfer the photos from your camera to your mobile device, then upload them to automatically share them with your customer to be purchased.</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="download_photos">Download Photos</string>
    <string name="your_photos_appear">Your photos will appear here automatically once your moment photoshoot is complete.</string>
    <string name="plz_patient">Please be patient</string>
    <string name="upload_optional_selfie">Upload Optional Selfie</string>
    <string name="update">Update</string>
    <string name="full_name_optional">Full Name (Optional)</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_type">Choose Type</string>
    <string name="choose_any">Choose Any One</string>
    <string name="invalid_data">Invalid Card Data</string>
    <string name="save">Save</string>
    <string name="card">Card</string>
    <string name="cancel_underline"><u>Cancel</u></string>
    <string name="close_underline"><u>Close</u></string>
    <string name="web_address">Website Address</string>
    <string name="business_name">Business Name</string>
    <string name="pro_photographer">Please enter your business information to be verified as a Pro level Fautus photographer. \n\nThis information is confidential and will not be shared with users.</string>
    <string name="here_snap">Here is the code for your Snap Moment:</string>
    <string name="upload_photo">Upload the photos from your Snap Moment, and share that code with your client. Then, they can view and download the photos.</string>
    <string name="enter_the_code">To see your photos, enter your snap code for the Moment your photographer started</string>
    <string name="enter_five_chat">Enter 5 character code</string>
    <string name="send_this">Send this moment to the customer</string>
    <string name="email_will_sent">An email will be sent to the user with instructions on how to install and download the app and purchase photos.\n\n*This information will not be sold</string>
</resources>