<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutMatch"
    android:padding="@dimen/size40"
    android:orientation="vertical"
    android:weightSum="5.55">


    <TextView
        style="@style/TextRegular"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:gravity="bottom|center"
        android:text="@string/making_money"
        android:textSize="@dimen/text16" />

    <TextView
        style="@style/TextMedium"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:gravity="top|center"
        android:text="@string/never_been"
        android:textSize="@dimen/text16" />

    <TextView
        style="@style/TextLight"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingTop="@dimen/size10"
        android:text="@string/ready_to_tack"
        android:textSize="@dimen/text14" />

    <TextView
        style="@style/TextLight"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:text="@string/follow_the_map"
        android:textSize="@dimen/text14" />

    <RelativeLayout
        style="@style/LayoutWidMatch_HeiWei"
        android:layout_weight="2">

        <ImageView
            style="@style/LayoutWidMatch_HeiWei"
            android:layout_width="@dimen/size50"
            android:layout_height="@dimen/size50"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/camera_img" />
    </RelativeLayout>



    <TextView
        style="@style/TextLight"
        android:layout_height="0dip"
        android:layout_weight="0.55"
        android:paddingStart="@dimen/size20"
        android:paddingEnd="@dimen/size20"
        android:text="@string/very_simple"
        android:textSize="@dimen/text11" />


</LinearLayout>