<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutWidMatch_HeiWrap"
    android:layout_margin="@dimen/size15"
    android:background="@drawable/corner_rounded_white_bg">

    <ScrollView style="@style/LayoutWidMatch_HeiWrap">

        <LinearLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:orientation="vertical"
            android:padding="@dimen/size16">

            <TextView
                style="@style/TextBold"
                android:layout_margin="@dimen/size5"
                android:paddingTop="@dimen/size10"
                android:text="@string/send_this"
                android:textAllCaps="true"
                android:textSize="@dimen/text14" />

            <TextView
                style="@style/TextLight"
                android:layout_margin="@dimen/size5"
                android:text="@string/email_will_sent"
                android:textSize="@dimen/text14" />

            <EditText
                android:id="@+id/email_address_edt"
                style="@style/EditTextLight"
                android:layout_marginTop="@dimen/size10"
                android:background="@drawable/rectangle_bordered_bg"
                android:hint="@string/email_address"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:paddingEnd="0dip"
                android:paddingStart="@dimen/size15" />

            <LinearLayout
                android:id="@+id/continue_lay"
                style="@style/LayoutWidMatch_HeiWrap"
                android:layout_marginTop="@dimen/size18"
                android:background="@drawable/rectangle_bordered_bg"
                android:gravity="center"
                android:padding="@dimen/size10"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:text="@string/cont"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text14" />

                <ImageView
                    android:layout_width="@dimen/size15"
                    android:layout_height="@dimen/size15"
                    android:layout_marginStart="@dimen/size10"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/next_img" />
            </LinearLayout>

            <TextView
                android:id="@+id/cancel_txt"
                style="@style/TextRegular"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/size5"
                android:text="@string/cancel_underline"
                android:textSize="@dimen/text13" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


