<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutWidMatch_HeiWrap"
    android:layout_margin="@dimen/size15"
    android:background="@drawable/corner_rounded_white_bg">

    <LinearLayout
        style="@style/LayoutWidMatch_HeiWrap"
        android:orientation="vertical"
        android:padding="@dimen/size30">

        <TextView
            style="@style/TextRegular"
            android:text="@string/enter_the_code"
            android:textSize="@dimen/text14" />

        <EditText
            android:id="@+id/session_code_edt"
            style="@style/EditTextLight"
            android:background="@drawable/rectangle_bordered_bg"
            android:hint="@string/enter_five_chat"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/size30"
            android:paddingEnd="0dip"
            android:maxLength="5"
            android:paddingStart="@dimen/size15" />

        <LinearLayout
            android:id="@+id/continue_lay"
            style="@style/LayoutWidMatch_HeiWrap"
            android:background="@drawable/rectangle_bordered_bg"
            android:gravity="center"
            android:layout_marginTop="@dimen/size30"
            android:padding="@dimen/size10"
            tools:ignore="UseCompoundDrawables">


            <TextView
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:text="@string/cont"
                android:textAllCaps="true"
                android:textSize="@dimen/text14" />

            <ImageView
                android:layout_width="@dimen/size15"
                android:layout_height="@dimen/size15"
                android:layout_marginStart="@dimen/size10"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/next_img" />
        </LinearLayout>

        <TextView
            android:id="@+id/close_txt"
            style="@style/TextLight"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/size7"
            android:layout_marginTop="@dimen/size10"
            android:text="@string/close_underline"
            android:textSize="@dimen/text13" />

    </LinearLayout>
</RelativeLayout>


